[gd_scene load_steps=18 format=3]

[ext_resource path="res://Scenes/niveles/nivel2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/niveles/nivel1.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/niveles/fondo(general).png" type="Texture2D" id=3]
[ext_resource path="res://art/niveles/Polygon 1.png" type="Texture2D" id=4]
[ext_resource path="res://Scenes/niveles/nivel3.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/niveles/Polygon 2flecha.png" type="Texture2D" id=6]
[ext_resource path="res://Scenes/niveles/nivel4.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/ajustes/nivel5.tscn" type="PackedScene" id=8]
[ext_resource path="res://art/subniveles/botones/retroceder.png" type="Texture2D" id=9]
[ext_resource path="res://art/niveles/decorar1.png" type="Texture2D" id=10]
[ext_resource path="res://Scenes/niveles/niveles.gd" type="Script" id=14]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="Theme" id=3]
ScrollContainer/styles/bg = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=2]
Button/styles/normal = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="Theme" id=6]
Button/styles/normal = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 14 )
__meta__ = {
"_edit_horizontal_guides_": [ -79.0 ]
}

[node name="fondo" type="TextureRect" parent="."]
offset_left = -290.0
offset_top = -51.0
offset_right = 835.0
offset_bottom = 2385.0
pivot_offset = Vector2( 1117, 473 )
texture = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 4.0
offset_top = 111.0
offset_right = 608.0
offset_bottom = 693.0
custom_minimum_size = Vector2( 604, 0 )
theme = SubResource( 3 )
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
offset_right = 3436.0
custom_minimum_size = Vector2( 3436, 0 )
custom_constants/separation = 700

[node name="nivel1" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 2 )]

[node name="nivel2" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 1 )]
pivot_offset = Vector2( -636, -122 )

[node name="nivel3" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 5 )]

[node name="nivel4" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 7 )]

[node name="nivel5" parent="ScrollContainer/HBoxContainer" instance=ExtResource( 8 )]

[node name="siguiente" type="Button" parent="."]
offset_left = 358.0
offset_top = 738.0
offset_right = 457.0
offset_bottom = 893.0
theme = SubResource( 2 )
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="anterior" type="Button" parent="."]
offset_left = 173.0
offset_top = 734.0
offset_right = 253.0
offset_bottom = 883.0
theme = SubResource( 6 )
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -45.0
offset_top = 645.0
offset_right = 653.0
offset_bottom = 727.0
texture = ExtResource( 10 )
expand = true

[node name="Button" type="Button" parent="."]
offset_right = 112.0
offset_bottom = 108.0
icon = ExtResource( 9 )
flat = true
expand_icon = true

[connection signal="pressed" from="siguiente" to="." method="_on_siguiente_pressed"]
[connection signal="pressed" from="anterior" to="." method="_on_anterior_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
